policies/seccomp-profile-containers.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicy
metadata:
  name: check-seccomp-profile-containers
spec:
  failurePolicy: Fail
  matchConstraints:
    resourceRules:
      - apiGroups: [""]
        apiVersions: ["v1"]
        operations: ["CREATE","UPDATE"]
        resources: ["pods"]
  variables:
    - name: allowedSeccompTypes
      expression: >
        ["RuntimeDefault","Localhost"]
  validations:
    - expression: >
        (has(object.spec.os) &&
         has(object.spec.os.name) &&
         object.spec.os.name.lowerAscii() == "windows") ||
        object.spec.containers.all(c,
          !has(c.securityContext) ||
          !has(c.securityContext.seccompProfile) ||
          !has(c.securityContext.seccompProfile.type) ||
          variables.allowedSeccompTypes.exists(t, t == c.securityContext.seccompProfile.type)
        )
      message: >
        spec.containers[*].securityContext.seccompProfile.type must be undefined, RuntimeDefault, or Localhost.
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: check-seccomp-profile-containers-namespace-optout-warn
spec:
  policyName: check-seccomp-profile-containers
  validationActions:
    - Warn
  matchResources:
    namespaceSelector:
      matchExpressions:
        - key: validating-admission-policies.kolteq.com/warn
          operator: In
          values: ["baseline"]
        - key: validating-admission-policies.kolteq.com/seccomp-profile-containers
          operator: NotIn
          values: ["false"]
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: check-seccomp-profile-containers-namespace-optin-warn
spec:
  policyName: check-seccomp-profile-containers
  validationActions:
    - Warn
  matchResources:
    namespaceSelector:
      matchExpressions:
        - key: seccomp-profile-containers.validating-admission-policies.kolteq.com/warn
          operator: In
          values: ["true"]
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: check-seccomp-profile-containers-namespace-optout-audit
spec:
  policyName: check-seccomp-profile-containers
  validationActions:
    - Audit
  matchResources:
    namespaceSelector:
      matchExpressions:
        - key: validating-admission-policies.kolteq.com/audit
          operator: In
          values: ["baseline"]
        - key: validating-admission-policies.kolteq.com/seccomp-profile-containers
          operator: NotIn
          values: ["false"]
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: check-seccomp-profile-containers-namespace-optin-audit
spec:
  policyName: check-seccomp-profile-containers
  validationActions:
    - Audit
  matchResources:
    namespaceSelector:
      matchExpressions:
        - key: seccomp-profile-containers.validating-admission-policies.kolteq.com/audit
          operator: In
          values: ["true"]
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: check-seccomp-profile-containers-namespace-optout-deny
spec:
  policyName: check-seccomp-profile-containers
  validationActions:
    - Deny
  matchResources:
    namespaceSelector:
      matchExpressions:
        - key: validating-admission-policies.kolteq.com/enforce
          operator: In
          values: ["baseline"]
        - key: validating-admission-policies.kolteq.com/seccomp-profile-containers
          operator: NotIn
          values: ["false"]
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: check-seccomp-profile-containers-namespace-optin-deny
spec:
  policyName: check-seccomp-profile-containers
  validationActions:
    - Deny
  matchResources:
    namespaceSelector:
      matchExpressions:
        - key: seccomp-profile-containers.validating-admission-policies.kolteq.com/enforce
          operator: In
          values: ["true"]
